RF model accuracy improvements, GBDT, diff features

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -546,7 +546,7 @@
     "expanded_ct.loc[expanded_ct['replaced_mode'] == 'Unlabeled', 'Replaced_mode'] = \"Unlabeled\"\n",
     "\n",
     "# Select variables of interest from complete OpenPATH data\n",
-    "data = expanded_ct[['Mode_confirm','Replaced_mode','replaced_mode','Trip_purpose','duration','distance_miles','start_local_dt_weekday','available_modes','AGE','HHINC','VEH','HHSIZE','CHILDREN','GENDER','STUDENT','user_id','_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','cleaned_trip']].copy()\n",
+    "data = expanded_ct[['Mode_confirm','Replaced_mode','replaced_mode','Trip_purpose','duration','distance_miles','start_local_dt_weekday','available_modes','AGE','HHINC','VEH','HHSIZE','CHILDREN','GENDER','STUDENT','user_id','_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','cleaned_trip','start_fmt_time']].copy()\n",
     "\n",
     "# List of variables to keep in data but not turn into categorical number variables\n",
     "dont_categorize = ['user_id','_id','cleaned_trip']\n",
@@ -557,13 +557,21 @@
     "# Get timestamp from known year/month/day aggregated to days\n",
     "data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
     "data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
-    "data = data.drop(columns=['year','month','day'])\n",
+    "data = data.drop(columns=['year','day'])\n",
+    "\n",
+    "# Get time of day\n",
+    "data['hour'] = [int(x[1][:2]) for x in expanded_ct.start_fmt_time.str.split('T')]\n",
     "\n",
     "# Fix age\n",
     "data['AGE'] = 2022 - data['AGE']\n",
     "\n",
-    "# Get number of workers\n",
-    "data['WORKERS'] = data['HHSIZE'] - data['CHILDREN']\n",
+    "# Recoded Cyclical Time of Day\n",
+    "hours_in_day = 24\n",
+    "months_in_year = 12\n",
+    "data['sin_time'] = np.sin(2*np.pi*data.hour/hours_in_day)\n",
+    "data['cos_time'] = np.cos(2*np.pi*data.hour/hours_in_day)\n",
+    "data['sin_month'] = np.sin(2*np.pi*data.month/months_in_year)\n",
+    "data['cos_month'] = np.cos(2*np.pi*data.month/months_in_year)\n",
     "\n",
     "# Duration in minutes\n",
     "data['duration'] = data['duration'] / 60\n",
@@ -572,9 +580,8 @@
     "data = data[~data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
     "data = data[~data['Replaced_mode'].isin(['Not a Trip','Other'])]\n",
     "data = data[~data['available_modes'].isin(['None', 'Prefer not to say'])]\n",
-    "# data = data[~data['Trip_purpose'].isin(['not_a_trip','Other'])]\n",
-    "# data = data[~data['HHINC'].isin(['Prefer not to say'])]\n",
-    "# data = data[~data['VEH'].isin(['Prefer not to say / Prefiero no decir.'])]\n",
+    "data = data[~data['Trip_purpose'].isin(['not_a_trip','Other'])]\n",
+    "data = data[~data['HHINC'].isin(['Prefer not to say'])]\n",
     "\n",
     "# Combine variable categories\n",
     "data = data.replace('Car, drove alone', 'car')\n",
@@ -590,19 +597,24 @@
     "data = data.replace('Taxi/Uber/Lyft', 'ridehail')\n",
     "data = data.replace('Pilot ebike', 'ebike')\n",
     "\n",
-    "# data = data.replace(['Home','School','Work'], 'hbw')\n",
-    "# data = data.replace(['Entertainment/Social','Meal','Personal/Medical','Pick-up/Drop off','Recreation/Exercise','Religious','Shopping','Transit transfer'], 'non_hbw')\n",
+    "data['start_local_dt_weekday'] = data['start_local_dt_weekday'].replace(['1','2','3','4','5'],'1')\n",
+    "data['start_local_dt_weekday'] = data['start_local_dt_weekday'].replace(['0','6'],'0')\n",
     "\n",
-    "# data['start_local_dt_weekday'] = data['start_local_dt_weekday'].replace(['1','2','3','4','5'],'1')\n",
-    "# data['start_local_dt_weekday'] = data['start_local_dt_weekday'].replace(['0','6'],'0')\n",
+    "data.HHINC = data.HHINC.replace(['Less than $24,999',\n",
+    "                                       '$25,000-$49,999',\n",
+    "                                       '$50,000-$99,999',\n",
+    "                                       '$100,000 -$149,999',\n",
+    "                                       '$150,000-$199,999',\n",
+    "                                       '$200,000 or more'], [12500,37500,75000,125000,175000,250000])\n",
     "\n",
-    "# data = data.replace(['By hours ','Custodian','Fire Fighter 2 Training',\n",
-    "#  'Graduate','Prefer not to say','Taking prerequisites missing for grad program ',\n",
-    "#  'Yes - Full Time College/University',\n",
-    "#  'Yes - Part-Time College/University',\n",
-    "#  'Yes - Vocation/Technical/Trade School',\n",
-    "#  'taking classes toward early childhood licensure'], 'student')\n",
-    "# data = data.replace('Not a student', 'non_student')\n",
+    "# OHE encode categorical features (keep record)\n",
+    "keep = data['Trip_purpose']\n",
+    "data = pd.get_dummies(data, columns=['Trip_purpose'], prefix=['purp'])\n",
+    "data['Trip_purpose'] = keep\n",
+    "\n",
+    "# keep = data['month']\n",
+    "# data = pd.get_dummies(data, columns=['month'], prefix=['month'])\n",
+    "# data['month'] = keep\n",
     "\n",
     "# Calculate travel times for each trip, across every mode\n",
     "def add_all_mode_tt(data, mode_col, duration_col, dist_col):\n",
@@ -641,6 +653,10 @@
     "\n",
     "# Calculate all mode travel costs and add to dataframe\n",
     "add_all_mode_cost(data, cost_factors, 'distance_miles')\n",
+    "\n",
+    "# Normalize mode cost by income\n",
+    "for mode in cost_factors.keys():\n",
+    "    data[f\"cost_{mode}\"] = data[f\"cost_{mode}\"] / (data['HHINC'] / 1000)\n",
     "\n",
     "# Labels for modes in the availability survey\n",
     "availability_codes = {'Public transportation (bus, subway, light rail, etc.)':'transit',\n",
@@ -690,7 +706,7 @@
     "data_sp['mode_choice'] = data_sp['Replaced_mode']\n",
     "\n",
     "# The SP data cannot include trips where the chosen/replaced modes are stated the same\n",
-    "# We need to mark the chosen mode as unavailable in the SP data, which breaks the model if they're the same\n",
+    "# because we need to mark the chosen mode as unavailable in the SP data, which breaks the model if they're the same\n",
     "data_sp = data_sp[data_sp.Mode_confirm!=data_sp.Replaced_mode]\n",
     "\n",
     "# Make sure both chosen and replaced modes are in choice sets\n",
@@ -702,22 +718,6 @@
     "data = data[~data['Replaced_mode'].isin(['Unlabeled', 'No Travel'])]\n",
     "\n",
     "# Handle all variables that are ordinal; otherwise they may not end up in correct order\n",
-    "# data.HHINC = pd.Categorical(data.HHINC,\n",
-    "#                             ordered=True,\n",
-    "#                             categories=['Less than $24,999',\n",
-    "#                                        '$25,000-$49,999',\n",
-    "#                                        '$50,000-$99,999',\n",
-    "#                                        '$100,000 -$149,999',\n",
-    "#                                        '$150,000-$199,999',\n",
-    "#                                        '$200,000 or more'])\n",
-    "# data.VEH = pd.Categorical(data.VEH,\n",
-    "#                             ordered=True,\n",
-    "#                             categories=['0',\n",
-    "#                                        '1',\n",
-    "#                                        '2',\n",
-    "#                                        '3',\n",
-    "#                                        '4+'])\n",
-    "\n",
     "# Make sure that all mode variables align after being converted to numeric variables\n",
     "mode_list = ['car','s_car','ridehail','transit','p_micro','s_micro','walk','ebike']\n",
     "data.mode_choice = pd.Categorical(data.mode_choice, ordered=True, categories=mode_list)\n",
@@ -752,7 +752,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -835,9 +835,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cat_code_lookup['Trip_purpose']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Substitution rate of ebike trips not including new trips\n",
     "plot_data = df_rp.copy()\n",
-    "plot_data['Trip_purpose'] = plot_data['Trip_purpose'].replace([0,1,2,3,4,5,6,7,8,9,10], cat_code_lookup['Trip_purpose'])\n",
+    "plot_data['Trip_purpose'] = plot_data['Trip_purpose'].replace([0,1,2,3,4,5,6,7,8,9], cat_code_lookup['Trip_purpose'])\n",
     "plot_data['mode_choice'] = plot_data['mode_choice'].replace([0,1,2,3,4,5,6,7], cat_code_lookup['mode_choice'])\n",
     "plot_data = plot_data[~plot_data['Trip_purpose'].isin(['not_a_trip'])].groupby(['Trip_purpose']).count()[['mode_choice']].reset_index()\n",
     "plot_data = plot_data.sort_values('mode_choice', ascending=False)\n",
@@ -856,7 +865,7 @@
    "source": [
     "# Substitution rate of ebike trips\n",
     "plot_data = df_rp.copy()\n",
-    "plot_data['Trip_purpose'] = plot_data['Trip_purpose'].replace([0,1,2,3,4,5,6,7,8,9,10], cat_code_lookup['Trip_purpose'])\n",
+    "plot_data['Trip_purpose'] = plot_data['Trip_purpose'].replace([0,1,2,3,4,5,6,7,8,9], cat_code_lookup['Trip_purpose'])\n",
     "plot_data['mode_choice'] = plot_data['mode_choice'].replace([0,1,2,3,4,5,6,7], cat_code_lookup['mode_choice'])\n",
     "plot_data = plot_data[plot_data['distance_miles']<10]\n",
     "plot_data['Mode'] = plot_data['mode_choice']\n",
@@ -880,10 +889,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "feature_list = ['tt_ebike', 'tt_s_car', 'tt_walk', 'tt_p_micro',\n",
     "       'tt_car', 'tt_transit', 'tt_s_micro', 'tt_ridehail', 'cost_car',\n",
     "       'cost_s_car', 'cost_ridehail', 'cost_s_micro', 'cost_transit', 'av_car', 'av_ebike', 'av_p_micro',\n",
-    "       'av_ridehail', 'av_s_car', 'av_s_micro', 'av_transit', 'av_walk']"
+    "       'av_ridehail', 'av_s_car', 'av_s_micro', 'av_transit', 'av_walk','purp_Entertainment/Social', 'purp_Home', 'purp_Meal',\n",
+    "       'purp_Personal/Medical', 'purp_Recreation/Exercise', 'purp_Religious',\n",
+    "       'purp_School', 'purp_Shopping', 'purp_Transit transfer', 'purp_Work','start_local_dt_weekday','sin_time', 'cos_time','sin_month','cos_month']"
    ]
   },
   {
@@ -900,7 +920,7 @@
    "outputs": [],
    "source": [
     "# Train and test model\n",
-    "rf, accuracy, f1, confusion = replacement_models.random_forest(data, 'mode_choice', feature_list, kf)\n",
+    "rf, accuracy, f1, confusion = replacement_models.gbdt(data, 'mode_choice', feature_list, kf)\n",
     "\n",
     "# Save scores for model comparison\n",
     "score_results['rf_chosen_chosen'] = (np.mean(accuracy), np.mean(f1))\n",
@@ -944,7 +964,7 @@
     "        unlabeled_df[f\"av_{mode_list[unlabeled_df['Mode_confirm'].iloc[i]]}\"].iat[i] = 0\n",
     "\n",
     "    # Train on all trips by other users\n",
-    "    rf, accuracy, f1, confusion = replacement_models.random_forest(labeled_df, 'mode_choice', feature_list, kf)\n",
+    "    rf, accuracy, f1, confusion = replacement_models.rf(labeled_df, 'mode_choice', feature_list, kf)\n",
     "\n",
     "    # Test on the stated replacement for holdout user\n",
     "    X_test = unlabeled_df[feature_list].values\n",
@@ -991,7 +1011,7 @@
     "    labeled_df = data.sample(n_samples)\n",
     "\n",
     "    # Construct model (accuracy/f1 don't matter here; we re-test per user below)\n",
-    "    rf, accuracy, f1, confusion = replacement_models.random_forest(labeled_df, 'mode_choice', feature_list, kf)\n",
+    "    rf, accuracy, f1, confusion = replacement_models.rf(labeled_df, 'mode_choice', feature_list, kf)\n",
     "\n",
     "    # Test on the stated replacement for holdout user\n",
     "    for user in list(np.unique(df_rp.user_id))[:10]:\n",
@@ -1069,9 +1089,6 @@
    },
    "outputs": [],
    "source": [
-    "import importlib\n",
-    "importlib.reload(replacement_models)\n",
-    "\n",
     "# Train and test model\n",
     "mxl, accuracy, f1, confusion = replacement_models.mxl(data, 'mode_choice')\n",
     "\n",
@@ -1446,6 +1463,13 @@
     "plt.xticks(rotation=90)\n",
     "plt.subplots_adjust(bottom=0.25)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
