Unify data setup across notebooks

--- a/viz_scripts/mapping_dictionaries.ipynb
+++ b/viz_scripts/mapping_dictionaries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "available-fusion",
    "metadata": {},
    "outputs": [],
@@ -12,32 +12,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "obvious-chapter",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pur= pd.read_csv(r'auxiliary_files/purpose_labels.csv')\n",
+    "df_pur = pd.read_csv(r'auxiliary_files/purpose_labels.csv')\n",
     "df_re = pd.read_csv(r'auxiliary_files/mode_labels.csv')\n",
-    "df_EI = pd.read_csv(r'auxiliary_files/energy_intensity.csv')\n",
+    "df_ei = pd.read_csv(r'auxiliary_files/energy_intensity.csv')\n",
     "\n",
     "#dictionaries:\n",
     "dic_pur = dict(zip(df_pur['purpose_confirm'],df_pur['bin_purpose'])) # bin purpose\n",
     "dic_re  = dict(zip(df_re['replaced_mode'],df_re['mode_clean'])) # bin modes\n",
-    "dic_fuel = dict(zip(df_EI['mode'],df_EI['fuel']))"
+    "dic_fuel = dict(zip(df_ei['mode'],df_ei['fuel']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "younger-indication",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'df_ei' (DataFrame)\n",
+      "Stored 'dic_re' (dict)\n",
+      "Stored 'dic_pur' (dict)\n",
+      "Stored 'dic_fuel' (dict)\n"
+     ]
+    }
+   ],
    "source": [
-    "%store df_EI \n",
-    "%store dic_re \n",
-    "%store dic_pur \n",
-    "%store dic_fuel "
+    "%store df_ei\n",
+    "%store dic_re\n",
+    "%store dic_pur\n",
+    "%store dic_fuel"
    ]
   }
  ],
