Starting to add plots for specified mode under program

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -28,7 +28,8 @@
     "year = 2021\n",
     "month = 9\n",
     "program = \"prepilot\"\n",
-    "study_type = None"
+    "study_type = \"program\"\n",
+    "mode_of_interest = \"Pilot ebike\""
    ]
   },
   {
@@ -64,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applied-conditioning",
+   "id": "nearby-fruit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statutory-conservation",
+   "id": "parallel-patch",
    "metadata": {},
    "source": [
     "## Collect Data From Database"
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "diagnostic-platinum",
+   "id": "flexible-training",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +148,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "civil-metabolism",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb = expanded_ct.query(f\"Mode_confirm == '{mode_of_interest}'\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "sized-drain",
    "metadata": {},
@@ -187,12 +198,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#eirp : energy impact replaced_mode\n",
-    "eirc=expanded_ct.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "eirc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
-    "eirc = eirc.reset_index()\n",
-    "eirc = eirc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
-    "eirc['boolean'] = eirc['Sketch of Total Energy_Impact(kWH)'] > 0\n",
+    "if study_type == 'program':\n",
+    "    #eirp : energy impact replaced_mode\n",
+    "    eirc=expanded_ct.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "    eirc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "    eirc = eirc.reset_index()\n",
+    "    eirc = eirc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "    eirc['boolean'] = eirc['Sketch of Total Energy_Impact(kWH)'] > 0\n",
+    "    \n",
+    "    subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
+    "    subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
     "\n",
     "#eimc : energy impact mode_confirm\n",
     "eimc=expanded_ct.groupby('Mode_confirm').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
@@ -200,26 +215,12 @@
     "eimc = eimc.reset_index()\n",
     "eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
     "\n",
-    "\n",
-    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
-    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
-    "\n",
     "subset2 = eimc [['Mode_confirm', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
     "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Mode_Confirm' }, inplace=True)\n",
     "\n",
     "df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
     "df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
     "df.rename(columns = {'value':'Energy Impact (kWH)'}, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "mechanical-error",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
    ]
   },
   {
@@ -255,15 +256,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net_energy_saved = round(sum(eirc['Sketch of Total Energy_Impact(kWH)']), 2)\n",
+    "if study_type == 'program':\n",
+    "    net_energy_saved = round(sum(eirc['Sketch of Total Energy_Impact(kWH)']), 2)\n",
     "\n",
-    "x = eirc['Sketch of Total Energy_Impact(kWH)']\n",
-    "y = eirc['Replaced_mode']\n",
-    "color =eirc['boolean']\n",
+    "    x = eirc['Sketch of Total Energy_Impact(kWH)']\n",
+    "    y = eirc['Replaced_mode']\n",
+    "    color =eirc['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
-    "energy_impact(x,y,color,plot_title,file_name)"
+    "    plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
+    "    file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
+    "    energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
   {
