--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -28,7 +28,8 @@
     "year = 2021\n",
     "month = 9\n",
     "program = \"prepilot\"\n",
-    "study_type = None"
+    "study_type = \"program\"\n",
+    "mode_of_interest = \"Pilot ebike\""
    ]
   },
   {
@@ -64,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prospective-explorer",
+   "id": "alternative-voltage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attended-click",
+   "id": "intellectual-columbus",
    "metadata": {},
    "source": [
     "## Collect Data From Database"
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "generic-ireland",
+   "id": "included-pride",
    "metadata": {},
    "outputs": [],
    "source": [
