--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -28,7 +28,8 @@
     "year = 2021\n",
     "month = 9\n",
     "program = \"prepilot\"\n",
-    "study_type = None"
+    "study_type = \"program\"\n",
+    "mode_of_interest = \"Pilot ebike\""
    ]
   },
   {
@@ -64,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "educational-galaxy",
+   "id": "fantastic-proposition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considerable-poison",
+   "id": "prospective-reviewer",
    "metadata": {},
    "source": [
     "## Collect Data From Database"
@@ -130,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civilian-dancing",
+   "id": "continuous-authorization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressed-formation",
+   "id": "partial-bangladesh",
    "metadata": {},
    "source": [
     "## Mode Shares"
@@ -149,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "documentary-beads",
+   "id": "induced-accused",
    "metadata": {},
    "outputs": [],
    "source": [
