--- a/viz_scripts/timeseries_analysis.ipynb
+++ b/viz_scripts/timeseries_analysis.ipynb
@@ -25,7 +25,8 @@
     "year = 2021\n",
     "month = 9\n",
     "program = \"prepilot\"\n",
-    "study_type = None"
+    "study_type = \"program\"\n",
+    "mode_of_interest = \"Pilot ebike\""
    ]
   },
   {
