--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -28,7 +28,8 @@
     "year = 2021\n",
     "month = 9\n",
     "program = \"prepilot\"\n",
-    "study_type = None"
+    "study_type = \"program\"\n",
+    "mode_of_interest = \"Pilot ebike\""
    ]
   },
   {
@@ -64,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sublime-olive",
+   "id": "cathedral-scanning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "velvet-girlfriend",
+   "id": "built-occupation",
    "metadata": {},
    "source": [
     "## Collect Data From Database"
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "breeding-organizer",
+   "id": "covered-render",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,18 +141,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "different-politics",
+   "id": "surgical-continuity",
    "metadata": {},
    "source": [
     "## Metrics for Specific Mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "demanding-picking",
-   "metadata": {},
-   "source": [
-    "# Ebike Data Only"
    ]
   },
   {
@@ -161,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")"
+    "data_eb = expanded_ct.query(f\"Mode_confirm == '{mode_of_interest}'\")"
    ]
   },
   {
@@ -175,17 +168,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "loaded-expert",
+   "metadata": {},
+   "source": [
+    "### Trips by purpose for specified mode"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "respiratory-breach",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "plot_title=\"Number of trips for each purpose for eBike only\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
-    "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
+    "if study_type == 'program':\n",
+    "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "    plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n%s\" % quality_text\n",
+    "    file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
   },
   {
@@ -195,11 +199,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
+    "if study_type == 'program':\n",
+    "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "    plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text\n",
+    "    file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
+    "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
    ]
   },
   {
@@ -207,7 +212,7 @@
    "id": "dependent-reservoir",
    "metadata": {},
    "source": [
-    "# Miles replaced_mode by E-bike data only "
+    "### Miles for each mode replaced by the specified mode"
    ]
   },
   {
@@ -217,23 +222,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
-    "dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
-    "dg = dg.reset_index()\n",
-    "dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "if study_type == 'program':\n",
+    "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
+    "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
+    "    dg = dg.reset_index()\n",
+    "    dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
     "\n",
-    "dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
-    "labels_m = []\n",
-    "values_m = []\n",
+    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
+    "    labels_m = []\n",
+    "    values_m = []\n",
     "\n",
-    "for x, y in dg_dict.items():\n",
-    "    labels_m.append(x)\n",
-    "    values_m.append(y)\n",
+    "    for x, y in dg_dict.items():\n",
+    "        labels_m.append(x)\n",
+    "        values_m.append(y)\n",
     "\n",
-    "plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
-    "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "print(dg)"
+    "    plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
+    "    file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    print(dg)"
    ]
   },
   {
@@ -241,7 +247,7 @@
    "id": "honest-dylan",
    "metadata": {},
    "source": [
-    "# Average Miles per ebike trip"
+    "### Average Miles per trip for specified mode"
    ]
   },
   {
@@ -251,15 +257,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "x='Replaced_mode'\n",
-    "y='Average (miles)'\n",
-    "y2 = \"Count\"\n",
+    "if study_type == 'program':\n",
+    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "    x='Replaced_mode'\n",
+    "    y='Average (miles)'\n",
+    "    y2 = \"Count\"\n",
     "\n",
-    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
+    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
+    "    file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
     "\n",
-    "barplot_mode(data,x,y,plot_title,file_name)"
+    "    barplot_mode(data,x,y,plot_title,file_name)"
    ]
   },
   {
@@ -269,15 +276,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "x='Replaced_mode'\n",
-    "y='Average (miles)'\n",
-    "y2 = \"Count\"\n",
+    "if study_type == 'program':\n",
+    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "    x='Replaced_mode'\n",
+    "    y='Average (miles)'\n",
+    "    y2 = \"Count\"\n",
     "\n",
-    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
+    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
+    "    file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
     "\n",
-    "barplot_mode2(data,x,y,y2,plot_title,file_name)"
+    "    barplot_mode2(data,x,y,y2,plot_title,file_name)"
    ]
   },
   {
@@ -285,19 +293,7 @@
    "id": "committed-favorite",
    "metadata": {},
    "source": [
-    "# Number of Trips by Day"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "patent-performance",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
-    "fq_days = fq_days.reset_index()\n",
-    "fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']"
+    "### Number of trips by day for specified mode"
    ]
   },
   {
@@ -307,14 +303,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = fq_days\n",
-    "x = 'Day of the Month'\n",
-    "y = 'Number of Trips'\n",
+    "if study_type == 'program':\n",
+    "    fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "    fq_days = fq_days.reset_index()\n",
+    "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
     "\n",
-    "plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
+    "    data = fq_days\n",
+    "    x = 'Day of the Month'\n",
+    "    y = 'Number of Trips'\n",
     "\n",
-    "barplot_day(data,x,y,plot_title,file_name)"
+    "    plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
+    "    file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
+    "\n",
+    "    barplot_day(data,x,y,plot_title,file_name)"
    ]
   },
   {
@@ -322,7 +323,7 @@
    "id": "pediatric-cowboy",
    "metadata": {},
    "source": [
-    "# Number of Trips by day of week¶"
+    "### Number of Trips by day of week¶"
    ]
   },
   {
@@ -332,29 +333,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
-    "fq_weekdays = fq_weekdays.reset_index()\n",
-    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
-    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
-    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "fq_weekdays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "scientific-underground",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = fq_weekdays\n",
-    "x = 'Weekday'\n",
-    "y = 'Number of Trips'\n",
+    "if study_type == 'program':\n",
+    "    fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "    fq_weekdays = fq_weekdays.reset_index()\n",
+    "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
     "\n",
-    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "    data = fq_weekdays\n",
+    "    x = 'Weekday'\n",
+    "    y = 'Number of Trips'\n",
     "\n",
-    "barplot_day(data,x,y,plot_title,file_name)"
+    "    plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "    file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "\n",
+    "    barplot_day(data,x,y,plot_title,file_name)"
    ]
   }
  ],
